--- a/first_cnn/first_slim_model.ipynb
+++ b/first_cnn/first_slim_model.ipynb
@@ -184,9 +184,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py27",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "py27"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -198,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
